images and text fixed

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
      <!-- navigation header  -->
-    <header class="container">
+    <header class="container" >
         <nav class="main-nav">
             <h1><a href="">G3 Architects</a></h1>
             <ul>
@@ -35,7 +35,7 @@
         </section>
         <section>
     </header>
-    <main >
+    <main  >
         <!-- Quick List of Our Features -->
         <section>
             <div class="features">
@@ -142,7 +142,7 @@
             <img src="./images/sponsors/amazon.png" alt="">
             <img src="./images/sponsors/google.png" alt="">
             <img src="./images/sponsors/telerama.png" alt="">
-            <img src="./images/sponsors/figma.png alt="">
+            <img src="./images/sponsors/figma.png" alt="">
             </div>
             
         </section>
@@ -151,8 +151,8 @@
             <div class="text-section">
               <h1 style="font-size: 40px">Featured products at one place</h1>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem
-                vestibulum sed scelerisque eros. Lectus faucibus.
+               Product features are a product's discrete areas of new and upgraded functionality
+               that deliver value to your customers.
               </p>
               <button class="btn">
                 Join Now <i class="fa-regular fa-arrow-right"></i>
